Fix for Expand Collapse Icon

--- a/modules/ftp/ftp_admin.css
+++ b/modules/ftp/ftp_admin.css
@@ -1,20 +1,11 @@
-.collapsible {
-	width: 6px;
-}
 .collapsible.collapsed {
-	margin: 2px;
-	display: block;
-	width: 15px;
-	height: 15px;
+	padding: 5px;
 	background: url('../../images/tablesorter_expand.png') no-repeat 3px 3px;
-	outline: 0;
+	cursor: pointer;
 }
 
 .collapsible.expanded {
-	margin: 2px;
-	display: block;
-	width: 15px;
-	height: 15px;
+	padding: 5px;
 	background: url('../../images/tablesorter_expand.png') no-repeat -24px 3px;
-	outline: 0;
+	cursor: pointer;
 }
